--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 body {
 	font-family: 'Kelly Slab', cursive;
-	background-image: url(../images/background.jpg);
+	background-image: url(../images/background.png);
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 header {
